--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-builder",
   "version": "0.0.7",
-  "description": "Gulp Builder - Utils to build a gulp file (still in dev [not stable], not use [Estimated release: August])",
+  "description": "All kind of tasks and utils for gulp (do not use [not stable version, estimated release: August 2015])",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
