--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "All kind of tasks and utils for gulp (do not use [not stable version, estimated release: August 2015])",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "npm install"
   },
   "repository": {
     "type": "git",
