[Troiano Andres] - Added yargs and run-sequence packages

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "lodash": "^3.7.0",
     "reactify": "^1.1.0",
     "rename": "^1.0.3",
+    "run": "^1.4.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "yargs": "^3.9.1"
   }
 }
