--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "gulp-builder",
   "version": "0.0.18",
   "description": "All kind of tasks and utils for gulp (do not use [not stable version, estimated release: August 2015])",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/karma/bin/karma start karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -37,10 +37,28 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.2.0",
-    "lodash": "^3.7.0",
+    "lodash": "^3.10.1",
     "reactify": "^1.1.0",
     "rename": "^1.0.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {
+    "browserify": "^9.0.8",
+    "chai": "^3.2.0",
+    "coverageify": "^1.0.4",
+    "karma": "^0.13.9",
+    "karma-browserify": "^4.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-coverage": "^0.2.6",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-mocha": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "mocha": "^2.2.5",
+    "phantomjs": "^1.9.18",
+    "rewireify": "^0.2.0",
+    "sinon": "^1.16.1",
+    "sinon-chai": "^2.8.0"
   }
 }
