--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.2.0",
     "lodash": "^3.10.1",
+    "material-design-icons": "^2.0.0",
     "reactify": "^1.1.0",
     "rename": "^1.0.3",
     "vinyl-buffer": "^1.0.0",
