--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "gulp-jshint": "^1.10.0",
     "gulp-minify-css": "^1.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^1.3.3",
+    "gulp-sass": "2.1.1",
     "gulp-uglify": "^1.2.0",
     "lodash": "^3.10.1",
     "material-design-icons": "^2.0.0",
