--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "gulp-uglify": "^1.2.0",
     "lodash": "^3.10.1",
     "material-design-icons": "^2.0.0",
+    "path": "^0.12.7",
     "reactify": "^1.1.0",
     "rename": "^1.0.3",
+    "run-sequence": "^1.1.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
