--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/troianoandres/gulp-builder",
   "dependencies": {
+    "aliasify": "^1.9.0",
     "browser-sync": "^2.6.4",
     "browserify": "^9.0.8",
     "chalk": "^1.0.0",
@@ -61,5 +62,8 @@
     "rewireify": "^0.2.0",
     "sinon": "^1.16.1",
     "sinon-chai": "^2.8.0"
+  },
+  "aliasify": {
+    "aliases": {}
   }
 }
